<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/quizz_title_style"
            android:text="@string/quizzes" />

        <RelativeLayout
            android:id="@+id/science_button"
            style="@style/quizz_button_layout"
            android:background="#1976d2"
            android:onClick="scienceButtonPressed">

            <TextView
                android:id="@+id/title_science_button"
                style="@style/quizz_title_button_layout"
                android:text="@string/science_title_button" />

            <TextView
                style="@style/quizz_subtitle_button_layout"
                android:layout_below="@id/title_science_button"
                android:text="@string/science_subtitle_button" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/anime_button"
            style="@style/quizz_button_layout"
            android:layout_marginTop="16dp"
            android:background="#ff5722"
            android:onClick="animeButtonPressed">

            <TextView
                android:id="@+id/title_anime_button"
                style="@style/quizz_title_button_layout"
                android:text="@string/anime_title_button" />

            <TextView
                style="@style/quizz_subtitle_button_layout"
                android:layout_below="@id/title_anime_button"
                android:text="@string/anime_subtitle_button" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/computer_science_button"
            style="@style/quizz_button_layout"
            android:layout_marginTop="16dp"
            android:background="#e91e63"
            android:onClick="computerScienceButtonPressed">

            <TextView
                android:id="@+id/title_computer_science_button"
                style="@style/quizz_title_button_layout"
                android:text="@string/computer_science_title_button" />

            <TextView
                style="@style/quizz_subtitle_button_layout"
                android:layout_below="@id/title_computer_science_button"
                android:text="@string/computer_science_subtitle_button" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/classic_music_button"
            style="@style/quizz_button_layout"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="#4caf50"
            android:onClick="classicalMusicButtonPressed">

            <TextView
                android:id="@+id/title_classic_music_button"
                style="@style/quizz_title_button_layout"
                android:text="@string/classical_music_title_button" />

            <TextView
                style="@style/quizz_subtitle_button_layout"
                android:layout_below="@id/title_classic_music_button"
                android:text="@string/classical_music_subtitle_button" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>